--- a/templates/addevents.html
+++ b/templates/addevents.html
@@ -1,19 +1,85 @@
 {% extends 'base.html' %} {% block content %}
 <h3>Add Event</h3>
+<h6>Please completed all fields</h6>
 <div class="row">
-    <form  action="" method="POST" class="col s12">
-        <div class="row">
-            <div class="input-field col s6">
-                <i class="material-icons prefix">account_circle</i>
-                <input id="icon_prefix" type="text" class="validate">
-                <label for="icon_prefix">Client Name</label>
-            </div>
-            <div class="input-field col s6">
-                <i class="material-icons prefix">phone</i>
-                <input id="icon_telephone" type="tel" class="validate">
-                <label for="icon_telephone">Location</label>
-            </div>
+  <form action="{{url_for('insert_event')}}" method="POST" class="col s12">
+    <div class="row">
+
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">account_circle</i>
+          <input id="client_name" name="client_name" type="text" required class="validate" />
+          <label for="icon_prefix">Client Name</label>
         </div>
-    </form>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">code</i>
+          <input id="client_ref" name="client_ref" type="text" class="validate" required maxlength="7" />
+          <label for="icon_code">Client Ref</label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">location_on</i>
+          <input id="location" name="location" type="text" class="validate" required/>
+          <label for="icon_location_on">Location</label>
+        </div>
+      </div>
+
+      <div class="row" id="matfix">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">today</i>
+          <input id="date" name="date" type="text" class="datepicker" required/>
+          <label for="icon_prefix">Date</label>
+        </div>
+      </div>
+
+       <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">access_time</i>
+          <input id="visit_time" name="visit_time" type="time" class="validate" required/>
+          <label for="icon_prefix"></label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">list</i>
+          <select id="purpose" name="purpose" class="material_select" required>
+            <option value="" disabled selected>Select a visit purpose</option>
+            {% for purpose in purpose %}
+            <option value="{{purpose.purpose}}"
+              >{{purpose.purpose}}</option
+            >
+            {% endfor %}
+          </select>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">poll</i>
+          <select id="status" name="status" class="material_select" required>
+            <option value="" disabled selected>Select status of event</option>
+            {% for status in status %}
+            <option value="{{status.status}}" >{{status.status}}</option>
+            {% endfor %}
+          </select>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+         <button class="btn waves-effect waves-light" type="submit" name="action" required>Submit
+        <i class="material-icons right">send</i>
+        </button>
+         </div>
+    </div>
+
+    </div>
+  </form>
 </div>
 {% endblock %}
