--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+<title>Events Manager</title> 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 </head>
 
 <body>
-    {% block content %} 
-    {% endblock %}
+<div class="container">
+    {% block content %} {% endblock %}
+   </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             $('.collapsible').collapsible();
-        })
+            $('select').material_select();
+        });
+
+        $('.datepicker').pickadate({
+            selectMonths: true, 
+            selectYears: 15,
+            today: 'Today',
+            clear: 'Clear',
+            close: 'Ok',
+            closeOnSelect: false
+        });
+            document.getElementById("matfix").addEventListener("click", function(e) {
+            e.stopPropagation();
+            });
     </script>
+ 
 </body>
 
 </html>
