--- a/templates/editevent.html
+++ b/templates/editevent.html
@@ -1,24 +1,92 @@
-{% extends 'base.html' %}
-{% block content %}
-<ul class="collapsible" data-collapsible="accordion">
-    {% for task in tasks %}
-    <li>
-            <div class="collapsible-header">
+{% extends 'base.html'%} {% block content %}
 
-                <div class=" task_header col s9">
-                <i class="material-icons">expand_more</i><strong>{{events.time}}</strong> - {{events.date}}
-                </div>
-                <div class="collapsible-body">
-                <span>
-                    {{events.client_name}}
-                    {{events.client_ref}}
-                    {{events.location}}
-                    {{events.date}}
-                    {{events.time}}
-                </span>
-            </div>
-            </div>
-    </li>
-    {% endfor %}
-    </ul>
+<h3>Edit Task</h3>
+<div class="row">
+    <form action="{{ url_for('update_event', event_id=event._id) }}" method="POST"  class="col s12">
+        <div class="row">
+            <div class="row">
+                <div class="input-field col s12">
+
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">account_circle</i>
+          <input id="client_name" name="client_name" type="text" required class="validate" readonly value="{{event.client_name}}">
+          <label for="icon_prefix">Client Name</label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">code</i>
+          <input id="client_ref" name="client_ref" type="text" class="validate" required maxlength="7" readonly value="{{event.client_ref}}">
+          <label for="icon_code">Client Ref</label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">location_on</i>
+          <input id="location" name="location" type="text" class="validate" required readonly value="{{event.location}}">
+          <label for="icon_location_on">Location</label>
+        </div>
+      </div>
+
+      <div class="row" id="matfix">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">today</i>
+          <input id="date" name="date" type="text" class="datepicker" required value="{{event.date}}">
+          <label for="icon_prefix">Date</label>
+        </div>
+      </div>
+
+       <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">access_time</i>
+          <input id="visit_time" name="visit_time" type="time" class="validate" required value="{{event.visit_time}}">
+          <label for="icon_prefix"></label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">list</i>
+          <select id="purpose" name="purpose" class="material_select" required>
+            <option value="" disabled selected>Select a visit purpose</option>
+            {% for purpose in purpose %}
+                {% if purpose.purpose == event.purpose %}
+                <option value="{{purpose.purpose}}" selected > {{purpose.purpose}}</option>
+                {% else %}
+                <option value="{{purpose.purpose}}">{{purpose.purpose}}</option>
+                {% endif %}
+            {% endfor %}
+          </select>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">poll</i>
+          <select id="status" name="status" class="material_select" required>
+            <option value="" disabled selected>Select status of event</option>
+            {% for status in status %}
+                {% if status.status == event.status %}
+                <option value="{{status.status}}" selected > {{status.status}}</option>
+                {% else %}
+                <option value="{{status.status}}" selected > {{status.status}}</option>
+                {% endif %}
+            {% endfor %}
+          </select>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+         <button class="btn waves-effect waves-light" type="submit" name="action" required>Submit
+        <i class="material-icons right">send</i>
+        </button>
+         </div>
+    </div>
+</div>
+    </form>
+</div>
 {% endblock %}
