--- a/templates/users.html
+++ b/templates/users.html
@@ -1,23 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-<ul class="collapsible" data-collapsible="accordion">
-    {% for task in tasks %}
-    <li>
-            <div class="collapsible-header">
-
-                <div class=" task_header col s9">
-                </div>
-                <div class="collapsible-body">
-                <span>
-                    {{users.name}}
-                    {{users.reg_no}}
-                    {{users.email}}
-                    {{users.company_name}}
-                    {{users.descrption}}
-                </span>
-            </div>
-            </div>
-    </li>
+    {% for users in users %}
+        {{users.name}}
+        {{users.reg_no}}
+        {{users.email}}
+        {{users.company_name}}
+        {{users.descrption}}   
     {% endfor %}
-    </ul>
+
+
 {% endblock %}
