--- a/templates/addevents.html
+++ b/templates/addevents.html
@@ -46,6 +46,15 @@
 
       <div class="row">
         <div class="input-field col s12">
+          <i class="material-icons prefix">search</i>
+          <input id="pvp" name="pvp" type="search" class="validate" required/>
+          <label for="icon_prefix">PVP</label>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="input-field col s12">
           <i class="material-icons prefix">list</i>
           <select id="purpose" name="purpose" class="material_select" required>
             <option value="" disabled selected>Select a visit purpose</option>
@@ -72,7 +81,7 @@
 
       <div class="row">
         <div class="input-field col s12">
-         <button class="btn waves-effect waves-light" type="submit" name="action" required>Submit
+         <button class="btn waves-effect waves-light" type="submit" required>Submit
         <i class="material-icons right">send</i>
         </button>
          </div>
