--- a/templates/addpurpose.html
+++ b/templates/addpurpose.html
@@ -13,7 +13,15 @@
 
       <div class="row">
         <div class="input-field col s12">
-         <button class="btn waves-effect waves-light" type="submit" name="action" required>Submit
+          <i class="material-icons prefix">list</i>
+          <input id="description" name="description" type="text" required class="validate" />
+          <label for="icon_prefix">Description</label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+         <button class="btn waves-effect waves-light" type="submit" required>Submit
         <i class="material-icons right">send</i>
         </button>
          </div>
