--- a/templates/events.html
+++ b/templates/events.html
@@ -16,7 +16,7 @@
                     <p><strong>Location:</strong> {{events.location}}</p>
                     <p><strong>Visit Date:</strong> {{events.date}}</p>
                     <p><strong>Visit Time:</strong> {{events.visit_time}}</p>
-                    <p><strong>PVP:</strong></p>
+                    <p><strong>PVP:</strong> {{events.pvp_name}}</p>
                     <p><strong>Purpose:</strong> {{events.purpose}}</p>
                     <p><strong>Status:</strong> {{events.status}}</p>
                 </span>
