--- a/templates/editevent.html
+++ b/templates/editevent.html
@@ -49,9 +49,25 @@
 
       <div class="row">
         <div class="input-field col s12">
+          <i class="material-icons prefix">search</i>
+          <select id="pvp_name" name="pvp_name" class="material_select" required>
+            <option value="" disabled selected>Select a PVP</option>
+            {% for users in users %}
+                {% if users.pvp_name == event.pvp_name %}
+                <option value="{{users.pvp_name}}" selected > {{users.pvp_name}} - {{users.reg_no}}</option>
+                {% else %}
+                <option value="{{users.pvp_name}}">{{users.pvp_name}} - {{users.reg_no}}</option>
+                {% endif %}
+            {% endfor %}
+          </select>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
           <i class="material-icons prefix">list</i>
           <select id="purpose" name="purpose" class="material_select" required>
-            <option value="" disabled selected>Select a visit purpose</option>
+            <option value="" disabled selected>Visit purpose</option>
             {% for purpose in purpose %}
                 {% if purpose.purpose == event.purpose %}
                 <option value="{{purpose.purpose}}" selected > {{purpose.purpose}}</option>
@@ -63,25 +79,25 @@
         </div>
       </div>
 
-      <div class="row">
+         <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">poll</i>
           <select id="status" name="status" class="material_select" required>
-            <option value="" disabled selected>Select status of event</option>
+            <option value="" disabled selected>Status of event</option>
             {% for status in status %}
                 {% if status.status == event.status %}
                 <option value="{{status.status}}" selected > {{status.status}}</option>
                 {% else %}
-                <option value="{{status.status}}" selected > {{status.status}}</option>
+                <option value="{{status.status}}">{{status.status}}</option>
                 {% endif %}
             {% endfor %}
           </select>
         </div>
-      </div>
+      </div>   
 
       <div class="row">
         <div class="input-field col s12">
-         <button class="btn waves-effect waves-light" type="submit" name="action" required>Submit
+         <button class="btn waves-effect waves-light" type="submit" required>Submit
         <i class="material-icons right">send</i>
         </button>
          </div>
