set up add user functionality

--- a/templates/users.html
+++ b/templates/users.html
@@ -5,12 +5,12 @@
         <li>
             <div class="collapsible-header">
                 <div class=" task_header col s9">
-                    <i class="material-icons">expand_more</i><strong>{{users.name}} - {{users.reg_no}}</strong> 
+                    <i class="material-icons">expand_more</i><strong>{{users.pvp_name}} - {{users.reg_no}}</strong> 
                 </div>
             </div>
             <div class="collapsible-body">
                 <span>
-                    <p><strong>Name:</strong> {{users.name}}</p>
+                    <p><strong>Name:</strong> {{users.pvp_name}}</p>
                     <p><strong>Registration No.:</strong> {{users.reg_no}}</p>
                     <p><strong>Email:</strong> {{users.email}}</p>
                     <p><strong>Company Name:</strong> {{users.company_name}}</p>
