commit to heroku

--- a/templates/users.html
+++ b/templates/users.html
@@ -18,6 +18,6 @@
             </div>
         </li>
         {% endfor %}
-        <a href="" class="btn waves-effect waves-light">Add User</a>
+        <a href="{{url_for('add_user')}}" class="btn waves-effect waves-light">Add User</a>
     </ul>
 {% endblock %}
