--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,24 @@
 <title>Events Manager</title> 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
 </head>
 
 <body>
-<div class="container">
-    {% block content %} {% endblock %}
+ <header>
+ <nav>
+      <div class="nav-wrapper">
+      <a href="{{url_for('get_events')}}" class="brand-logo">Event Manager</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="{{url_for('get_events')}}">Events</a></li>
+        <li><a href="{{url_for('get_users')}}">Users</a></li>
+        <li><a href="{{url_for('get_purpose')}}">Purpose</a></li>
+      </ul>
+    </div>
+  </nav>
+  </header>
+     <div class="container">
+{% block content %} {% endblock %}
    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -17,6 +30,7 @@
         $(document).ready(function() {
             $('.collapsible').collapsible();
             $('select').material_select();
+             $('.sidenav').sidenav();
         });
 
         $('.datepicker').pickadate({
