--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<h3>Add User</h3>
+<h3>Create new PVP account</h3>
 <div class="row">
   <form action="{{url_for('insert_user')}}" method="POST" class="col s12">
     <div class="row">
