--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -1,13 +1,16 @@
-{% extends 'base.html' %} {% block content %}
-<h3>Add Event</h3>
+{% extends 'base.html'%} {% block content %}
+
+<h3>Edit Appointment</h3>
 <div class="row">
-  <form action="{{url_for('insert_event')}}" method="POST" class="col s12">
-    <div class="row">
+    <form action="{{ url_for('update_event', event_id=event._id) }}" method="POST"  class="col s12">
+        <div class="row">
+            <div class="row">
+                <div class="input-field col s12">
 
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">account_circle</i>
-          <input id="client_name" name="client_name" type="text" required class="validate" />
+          <input id="client_name" name="client_name" type="text" required class="validate" readonly value="{{event.client_name}}">
           <label for="icon_prefix">Client Name</label>
         </div>
       </div>
@@ -15,7 +18,7 @@
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">code</i>
-          <input id="client_ref" name="client_ref" type="text" class="validate" required maxlength="7" />
+          <input id="client_ref" name="client_ref" type="text" class="validate" required maxlength="7" readonly value="{{event.client_ref}}">
           <label for="icon_code">Client Ref</label>
         </div>
       </div>
@@ -23,7 +26,7 @@
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">location_on</i>
-          <input id="location" name="location" type="text" class="validate" required/>
+          <input id="location" name="location" type="text" class="validate" required readonly value="{{event.location}}">
           <label for="icon_location_on">Location</label>
         </div>
       </div>
@@ -31,7 +34,7 @@
       <div class="row" id="matfix">
         <div class="input-field col s12">
           <i class="material-icons prefix">today</i>
-          <input id="date" name="date" type="text" class="datepicker" required/>
+          <input id="date" name="date" type="text" class="datepicker" required value="{{event.date}}">
           <label for="icon_prefix">Date</label>
         </div>
       </div>
@@ -39,7 +42,7 @@
        <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">access_time</i>
-          <input id="visit_time" name="visit_time" type="time" class="validate" required/>
+          <input id="visit_time" name="visit_time" type="time" class="validate" required value="{{event.visit_time}}">
           <label for="icon_prefix"></label>
         </div>
       </div>
@@ -48,9 +51,13 @@
         <div class="input-field col s12">
           <i class="material-icons prefix">search</i>
           <select id="pvp_name" name="pvp_name" class="material_select" required>
-            <option value="" disabled selected>Select a PVP</option>
+            <option value="" disabled >Select a PVP</option>
             {% for users in users %}
-            <option value="{{users.pvp_name}}">{{users.pvp_name}} - {{users.reg_no}}</option>
+                {% if users.pvp_name == event.pvp_name %}
+                <option value="{{users.pvp_name}}" selected > {{users.pvp_name}} - {{users.reg_no}}</option>
+                {% else %}
+                <option value="{{users.pvp_name}}">{{users.pvp_name}} - {{users.reg_no}}</option>
+                {% endif %}
             {% endfor %}
           </select>
         </div>
@@ -62,25 +69,31 @@
           <select id="purpose" name="purpose" class="material_select" required>
             <option value="" disabled selected>Visit purpose</option>
             {% for purpose in purpose %}
-            <option value="{{purpose.purpose}}"
-              >{{purpose.purpose}}</option
-            >
+                {% if purpose.purpose == event.purpose %}
+                <option value="{{purpose.purpose}}" selected > {{purpose.purpose}}</option>
+                {% else %}
+                <option value="{{purpose.purpose}}">{{purpose.purpose}}</option>
+                {% endif %}
             {% endfor %}
           </select>
         </div>
       </div>
 
-      <div class="row">
+         <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">poll</i>
           <select id="status" name="status" class="material_select" required>
-            <option value="" disabled selected>Status of event</option>
+            <option value="" disabled >Status of event</option>
             {% for status in status %}
-            <option value="{{status.status}}" >{{status.status}}</option>
+                {% if status.status == event.status %}
+                <option value="{{status.status}}" selected > {{status.status}}</option>
+                {% else %}
+                <option value="{{status.status}}" > {{status.status}}</option>
+                {% endif %}
             {% endfor %}
           </select>
         </div>
-      </div>
+      </div>   
 
       <div class="row">
         <div class="input-field col s12">
@@ -89,8 +102,7 @@
         </button>
          </div>
     </div>
-
-    </div>
-  </form>
+</div>
+    </form>
 </div>
 {% endblock %}
