--- a/templates/purpose.html
+++ b/templates/purpose.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<h3>Purpose</h3>
+<h3>Appointment Purpose</h3>
     <ul class="collapsible" data-collapsible="accordion">
         {% for purpose in purpose %}
         <li>
