--- a/templates/all_events.html
+++ b/templates/all_events.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %} {% block content %}
-<h3>Events</h3>
+<h3>Appointments</h3>
     <ul class="collapsible" data-collapsible="accordion">
+
         {% for events in events %}
         <li>
-            <div class="collapsible-header">
-                <div class=" task_header col s9">
-                      <a href="{{url_for('edit_event', event_id=events._id) }}" class="btn waves-effect waves-light">Edit</a>
-                    <i class="material-icons">expand_more</i><strong>{{events.date}} - {{events.visit_time}}</strong> 
-                </div>
+            <div class="collapsible-header ">
+                <div class="col s9">
+                <a href="{{url_for('edit_event', event_id=events._id)}}" class="btn waves-effect waves-light">Edit</a>
+                <i class="material-icons">expand_more</i><strong>{{events.pvp_name}} - {{events.date}} - {{events.visit_time}}</strong>   
             </div>
+  </div>
             <div class="collapsible-body">
                 <span>
                     <p><strong>Name:</strong> {{events.client_name}}</p>
@@ -21,7 +22,11 @@
                     <p><strong>Status:</strong> {{events.status}}</p>
                 </span>
             </div>
+         
         </li>
+        
         {% endfor %}
     </ul>
+     
 {% endblock %}
+ 
