set up create client functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,8 +51,8 @@
         <li><a href="{{url_for('users')}}">PVP Accounts</a></li>
         <li><a href="{{url_for('add_user')}}">Add PVP Account</a></li>
         <li class="divider"></li>
-        <li><a href="">Client Accounts</a></li>
-        <li><a href="">Add Client Account</a></li>
+        <li><a href="{{url_for('clients')}}">Client Accounts</a></li>
+        <li><a href="{{url_for('add_client')}}">Add Client Account</a></li>
         <li class="divider"></li>
         <li><a href="{{url_for('all_events')}}">All Appointments</a></li>
         <li><a href="{{url_for('add_event')}}">Add Appointments</a></li>
