--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<h3>Create new PVP account</h3>
+<h3>Create new vet account</h3>
 <div class="row">
   <form action="{{url_for('insert_user')}}" method="POST" class="col s12">
     <div class="row">
@@ -8,7 +8,7 @@
         <div class="input-field col s12">
           <i class="material-icons prefix">account_circle</i>
           <input id="pvp_name" name="pvp_name" type="text" required class="validate" />
-          <label for="icon_prefix">PVP Name</label>
+          <label for="icon_prefix">Vet Name</label>
         </div>
       </div>
 
@@ -16,7 +16,7 @@
         <div class="input-field col s12">
           <i class="material-icons prefix">code</i>
           <input id="reg_no" name="reg_no" type="text" required class="validate" />
-          <label for="icon_prefix">PVP registration number</label>
+          <label for="icon_prefix">Vet registration number</label>
         </div>
       </div>
 
