--- a/templates/clients.html
+++ b/templates/clients.html
@@ -4,9 +4,14 @@
         {% for clients in clients %}
         <li>
             <div class="collapsible-header">
-                <div class="col s9">
-                    <i class="material-icons">expand_more</i><strong>{{clients.client_name}} - {{clients.client_ref}}</strong> 
-                   <a href="{{url_for('add_user')}}" class="btn waves-effect waves-light">Add Client</a>
+                <div class="col s6">
+
+                <a href="{{url_for('edit_client', client_id=clients._id)}}"> <i class="material-icons right" id="edit_icon">edit</i></a>
+
+                <a href="{{url_for('delete_client', client_id=clients._id)}}"> <i class="material-icons right" id="delete_icon">delete</i></a>
+
+                <i class="material-icons roate left" id="expand_icon">expand_more</i><strong>{{clients.client_name}} - {{clients.client_ref}}</strong>
+
                 </div>
             </div>
             <div class="collapsible-body">
@@ -21,4 +26,7 @@
         {% endfor %}
         
     </ul>
+    <div>
+    <a href="{{url_for('add_client')}}" class="btn-floating btn-large waves-effect waves-light material-icons right" id="add_icon"> <i class="material-icons">add</i></a>
+</div>
 {% endblock %}
