--- a/templates/users.html
+++ b/templates/users.html
@@ -6,9 +6,9 @@
             <div class="collapsible-header">
                 <div class="col s6">
 
-                <a href=""> <i class="material-icons right" id="edit_icon">edit</i></a>
+                <a href="{{url_for('edit_user', user_id=users._id)}}"> <i class="material-icons right" id="edit_icon">edit</i></a>
 
-                <a href=""> <i class="material-icons right" id="delete_icon">delete</i></a>
+                <a href="{{url_for('delete_user', user_id=users._id)}}"> <i class="material-icons right" id="delete_icon">delete</i></a>
 
                 <i class="material-icons roate left" id="expand_icon">expand_more</i><strong>{{users.pvp_name}} - {{users.reg_no}}</strong>    
 
