edit/delete purpose

--- a/templates/clients.html
+++ b/templates/clients.html
@@ -26,6 +26,7 @@
         {% endfor %}
         
     </ul>
+    <!--create client link--> 
     <div>
     <a href="{{url_for('add_client')}}" class="btn-floating btn-large waves-effect waves-light material-icons right" id="add_icon"> <i class="material-icons">add</i></a>
 </div>
