--- a/templates/purpose.html
+++ b/templates/purpose.html
@@ -4,8 +4,14 @@
         {% for purpose in purpose %}
         <li>
             <div class="collapsible-header">
-                <div class=" task_header col s9">
-                    <i class="material-icons">expand_more</i><strong>{{purpose.purpose}}</strong> 
+                <div class="col s6">
+
+                <a href="{{url_for('edit_purpose', purpose_id=purpose._id)}}"> <i class="material-icons right" id="edit_icon">edit</i></a>
+
+                <a href="{{url_for('delete_purpose', purpose_id=purpose._id)}}"> <i class="material-icons right" id="delete_icon">delete</i></a>
+
+                <i class="material-icons roate left" id="expand_icon">expand_more</i><strong>{{purpose.purpose}}</strong>
+
                 </div>
             </div>
             <div class="collapsible-body">
