--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <header>
 <nav>
 <ul id="dropdown1" class="dropdown-content">
-    <li><a href="{{url_for('users')}}">PVP Accounts</a></li>
+    <li><a href="{{url_for('users')}}">Vet Accounts</a></li>
     <li class="divider"></li>
     <li><a href="{{url_for('clients')}}">Client Accounts</a></li>
 </ul>
@@ -44,8 +44,8 @@
 <!-- Mobile Navigation Sidebar -->
 
 <ul class="side-nav" id="mobile-demo">
-        <li><a href="{{url_for('users')}}">PVP Accounts</a></li>
-        <li><a href="{{url_for('add_user')}}">Add PVP Account</a></li>
+        <li><a href="{{url_for('users')}}">Vet Accounts</a></li>
+        <li><a href="{{url_for('add_user')}}">Add Vet Account</a></li>
         <li class="divider"></li>
         <li><a href="{{url_for('clients')}}">Client Accounts</a></li>
         <li><a href="{{url_for('add_client')}}">Add Client Account</a></li>
