--- a/templates/purpose.html
+++ b/templates/purpose.html
@@ -15,9 +15,7 @@
                 </div>
             </div>
             <div class="collapsible-body">
-                <span>
-                    <p><strong>Description:</strong> {{purpose.description}}</p>
-                </span>
+                <p><span class="title"><strong>Description:</strong></span> {{purpose.description}}</p>
             </div>
         </li>
         {% endfor %}
