--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,5 +30,15 @@ a {
 }
 
 #add_icon {
+ 
     color: #26a69a;
+}
+
+/*--According details--*/
+#all_events {
+  column-count: 3;
+}
+
+.title {
+color: #26a69a;
 }
