--- a/templates/all_events.html
+++ b/templates/all_events.html
@@ -11,28 +11,29 @@
 
                 <a href="{{url_for('delete_event', event_id=events._id)}}"> <i class="material-icons right" id="delete_icon">delete</i></a>
 
-                <i class="material-icons roate left" id="expand_icon">expand_more</i><strong>{{events.pvp_name}} - {{events.date}} - {{events.visit_time}}</strong>
+                <i class="material-icons roate left" id="expand_icon">expand_more</i><strong>{{events.date}} - {{events.visit_time}} - Vet: {{events.pvp_name}} - Client: {{events.client_name}} </strong>
 
             </div>
   </div>
-            <div class="collapsible-body">
-          
-                <span>
-                    <p><strong>Name:</strong> {{events.client_name}}</p>
-                    <p><strong>Client Reference:</strong> {{events.client_ref}}</p>
-                    <p><strong>Location:</strong> {{events.location}}</p>
-                    <p><strong>Visit Date:</strong> {{events.date}}</p>
-                    <p><strong>Visit Time:</strong> {{events.visit_time}}</p>
-                    <p><strong>PVP:</strong> {{events.pvp_name}}</p>
-                    <p><strong>Purpose:</strong> {{events.purpose}}</p>
-                    <p><strong>Status:</strong> {{events.status}}</p>
-                </span>
+            <div class="collapsible-body" id="all_events">
+
+                    <span class="title"><strong>Name:</strong></span> {{events.client_name}}
+                    <p><span class="title"><strong>Client Reference:</strong></span> {{events.client_ref}}</p>
+                    <p><span class="title"><strong>Location:</strong></span> {{events.location}}</p>
+                    
+                    <p><span class="title"><strong>Visit Date:</strong></span> {{events.date}}</p>
+                    <p><span class="title"><strong>Visit Time:</strong></span> {{events.visit_time}}</p>
+                    <br>
+                    <p><span class="title"><strong>PVP:</strong></span> {{events.pvp_name}}</p>
+                    <p><span class="title"><strong>Purpose:</strong></span> {{events.purpose}}</p>
+                    <p><span class="title"><strong>Status:</strong></span> {{events.status}}</p>
             </div>
-         
+    
         </li>
-  
         {% endfor %}
     </ul>
+
+ <!--create event link-->     
    <div>  
 <a href="{{url_for('add_event')}}" class="btn-floating btn-large waves-effect waves-light material-icons right" id="add_icon"> <i class="material-icons">add</i></a>
 </div> 
