--- a/templates/edit_client.html
+++ b/templates/edit_client.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%} {% block content %}
 
-<h3>Edit Client</h3>
+<h3>Edit Client Account</h3>
 <div class="row">
     <form action="{{url_for('update_client', client_id=client._id)}}" method="POST"  class="col s12">
         <div class="row">
