--- a/templates/base.html
+++ b/templates/base.html
@@ -67,9 +67,14 @@
 <div class="container">
 {% block content %} {% endblock %}
 </div>
- 
-<!--Footer-->
 
+
+<!--Footer-->
+<footer>
+ <div class="footer">
+  <p>Client & Vet Appointments Manager</p>
+</div>
+</footer>
 
 <!--Scripts-->
 
