--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%} {% block content %}
 
-<h3>Edit Vet</h3>
+<h3>Edit Vet Account</h3>
 <div class="row">
     <form action="{{url_for('update_user', user_id=user._id)}}" method="POST"  class="col s12">
         <div class="row">
