--- a/templates/add_purpose.html
+++ b/templates/add_purpose.html
@@ -19,7 +19,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row" id="button_submit">
         <div class="input-field col s12">
          <button class="btn waves-effect waves-light" type="submit" required>Submit
         <i class="material-icons right">send</i>
