--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<main>
+
 
 <!-- Dropdown Navigation Structure -->
 <header>
@@ -93,13 +93,14 @@
             today: 'Today',
             clear: 'Clear',
             close: 'Ok',
-            closeOnSelect: false
+            closeOnSelect: false,
+            format: 'dd/mm/yyyy'
         });
             document.getElementById("matfix").addEventListener("click", function(e) {
             e.stopPropagation();
             });
     </script>
- </main>
+
 </body>
 
 </html>
