--- a/templates/all_events.html
+++ b/templates/all_events.html
@@ -4,17 +4,17 @@
 
         {% for events in events %}
         <li>
-            <div class="collapsible-header ">
+            <div class="collapsible-header">
                 <div class="col s6">
 
                 <a href="{{url_for('edit_event', event_id=events._id)}}"> <i class="material-icons right" id="edit_icon">edit</i></a>
 
                 <a href="{{url_for('delete_event', event_id=events._id)}}"> <i class="material-icons right" id="delete_icon">delete</i></a>
 
-                <i class="material-icons roate left" id="expand_icon">expand_more</i><strong>{{events.date}} - {{events.visit_time}} - Vet: {{events.pvp_name}} - Client: {{events.client_name}} </strong>
-
+                <i class="material-icons roate left" id="expand_icon">expand_more</i><div id="label"><strong>{{events.date}} - {{events.visit_time}} - Vet: {{events.pvp_name}} - Client: {{events.client_name}}</strong></div>
+               
             </div>
-  </div>
+</div>
             <div class="collapsible-body" id="all_events">
 
                     <span class="title"><strong>Name:</strong></span> {{events.client_name}}
@@ -32,9 +32,9 @@
         </li>
         {% endfor %}
     </ul>
-
+  
  <!--create event link-->     
-   <div>  
+   <div class="add_new">  
 <a href="{{url_for('add_event')}}" class="btn-floating btn-large waves-effect waves-light material-icons right" id="add_icon"> <i class="material-icons">add</i></a>
 </div> 
 {% endblock %}
