--- a/templates/clients.html
+++ b/templates/clients.html
@@ -10,7 +10,7 @@
 
                 <a href="{{url_for('delete_client', client_id=clients._id)}}"> <i class="material-icons right" id="delete_icon">delete</i></a>
 
-                <i class="material-icons roate left" id="expand_icon">expand_more</i><strong>{{clients.client_name}} - {{clients.client_ref}}</strong>
+                <div id="label"><i class="material-icons roate left" id="expand_icon">expand_more</i><strong>{{clients.client_name}} - {{clients.client_ref}}</strong></div>
 
                 </div>
             </div>
@@ -25,7 +25,7 @@
         
     </ul>
     <!--create client link--> 
-    <div>
+    <div class="add_new">
     <a href="{{url_for('add_client')}}" class="btn-floating btn-large waves-effect waves-light material-icons right" id="add_icon"> <i class="material-icons">add</i></a>
 </div>
 {% endblock %}
